<resources>
    <string name="app_name">CSE4086_project</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_again">Password Again</string>
    <string name="button_sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="name_surname">Name and Surname</string>
    <string name="registerhere">Register here.</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_login">login</string>
    <string name="text_register">Sign up</string>
    <string name="change_pass">Enter your new password and get an email!</string>
    <string name="change_pass_button">Change my password!</string>
    <string name="text_changepass">Send a link to me!</string>
    <string name="go_to_login">Go to login</string>
    <string name="change_my_password">Change my password</string>
    <string name="go_to_register">Go to register</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="post_complaint">Post Complaint</string>
    <string name="pick_location">Pick Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="new_password" />
    <string name="new_password1">New Password</string>
    <string name="new_password_repeat">New Password Again</string>
    <string name="new_name_surname">New Name and Surname</string>
    <string name="change_your_password">Change your password</string>
    <string name="settings">Settings</string>
    <string name="change_your_user_name">Change your user name</string>
    <string name="save">Save</string>
    <string name="turn_back_page">Turn Back Page</string>
    <string name="new_admin">New Admin Registiration</string>
</resources>