<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChangePassActivity">


    <Button
        android:id="@+id/button_forgot_password2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:layout_marginBottom="172dp"
        android:onClick="goToLogin"
        android:text="@string/go_to_login"
        android:textAllCaps="false"
        android:textColor="#FF705957"
        app:backgroundTint="#FFF6AD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_change_pass_button"
        app:layout_constraintVertical_bias="0.407">

    </Button>

    <EditText
        android:id="@+id/id_change_pass_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/text_email"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/id_change_pass_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/id_change_pass_button"
        android:layout_width="230dp"
        android:layout_height="67dp"
        android:layout_marginBottom="304dp"
        android:backgroundTint="#BFABAB"
        android:fontFamily="monospace"
        android:onClick="changePass"
        android:text="@string/text_changepass"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>