<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4">

    <Button
        android:id="@+id/back_page_button3"
        android:layout_width="65dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#8049394A"
        android:breakStrategy="balanced"
        android:bufferType="normal"
        android:onClick="turnBackPage"
        app:icon="?attr/homeAsUpIndicator"
        app:iconPadding="?attr/listPreferredItemPaddingStart"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/id_register_button2"
        android:layout_width="164dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="157dp"
        android:backgroundTint="#8049394A"
        android:fontFamily="monospace"
        android:onClick="saveNewAdmin"
        android:text="@string/text_register"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_register_pass4"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/id_register_pass4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_register_pass3" />

    <EditText
        android:id="@+id/id_register_pass3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/id_register_pass4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_register_email2" />

    <EditText
        android:id="@+id/id_register_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/text_email"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_register_name_surname2" />

    <EditText
        android:id="@+id/id_register_name_surname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/name_surname"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="20dp"
        android:background="#80F6F0F0"
        android:backgroundTint="#F4EFEF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/id_register_name_surname2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="333dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/new_admin"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>