<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreatePostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/description"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/pictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:text="@string/take_picture"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                android:textColorHighlight="@color/white"/>

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:foregroundGravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                tools:ignore="MissingConstraints" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/maps"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp" />
            <Button
                android:id="@+id/postButton"
                android:text="@string/post_complaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
