<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/editTextPassword4"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="67dp"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/save_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_header_layout" />

    <Button
        android:id="@+id/back_page_button4"
        android:layout_width="65dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="330dp"
        android:layout_marginBottom="663dp"
        android:backgroundTint="#673AB7"
        android:breakStrategy="balanced"
        android:bufferType="normal"
        android:onClick="previousActivityForUserName"
        app:icon="?attr/homeAsUpIndicator"
        app:iconPadding="?attr/listPreferredItemPaddingStart"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/username_header_layout"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="63dp"
        android:background="#E1AFC1"
        android:backgroundTint="#80673AB7"
        app:layout_constraintBottom_toTopOf="@+id/editTextNameSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/change_your_user_name"
            android:textAlignment="center"
            android:textColor="#1A237E"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/back_page_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNameSurname"
        android:layout_width="277dp"
        android:layout_height="57dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="67dp"
        android:hint="@string/name_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_header_layout" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNewNameSurname"
        android:layout_width="277dp"
        android:layout_height="57dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="67dp"
        android:hint="@string/new_name_surname"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_header_layout"
        app:layout_constraintVertical_bias="0.687" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/back_page_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button1"
        android:layout_width="93dp"
        android:layout_height="56dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="#673AB7"
        android:text="@string/save"
        android:onClick="saveUserNameChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword4" />

</androidx.constraintlayout.widget.ConstraintLayout>